k8s/overlays/prod/prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-api-prod
  labels:
    environment: production
    managed-by: kustomize
