k8s/overlays/prod/apps-prod-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-api-users-deployment
  namespace: amazon-api
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: amazon-api-users
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazonapi-orders-deployment
  namespace: amazon-api
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: amazonapi-orders
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
  namespace: amazon-api
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: notifications-service
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
